--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css&quot; rel="stylesheet" integrity="sha384-DQvkBjpPgn7RC31MCQoOeC9TI2kdqa4+BSgNMNj8v77fdC77Kj5zpWFTJaaAoMbC" crossorigin="anonymous">
+<meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet">
 <title>Document</title>
 </head>
 <body>
+    <header class="container text-center">
+        <img scr="Foto de Andrea Piacquadio: https://www.pexels.com/pt-br/foto/homem-usando-oculos-e-jaqueta-marrom-842811/" alt="uma imagem" width="200" height="200"
+        class="rounded-circle"> 
 <h1>meu nome é Felipe Luis Medeiros Souto</h1>
 <p>Olá, eu sou Felipe Luis, um profissional apaixonado por desafios e sempre em busca de aprendizado constante.
-Sou uma pessoa dedicada, criativa e com grande capacidade de adaptação. Tenho facilidade em trabalhar em equipe, resolução de problemas e atenção aos detalhes. Minha paixão pela [área de interesse, como tecnologia, design, escrita, etc.] me impulsiona a sempre buscar soluções inovadoras e eficientes.
+Sou uma pessoa dedicada, criativa e com grande capacidade de adaptação. Tenho facilidade em trabalhar em equipe, resolução de problemas e atenção aos detalhes. Minha paixão pela como tecnologia me impulsiona a sempre buscar soluções inovadoras e eficientes.
 </p>
 <p>meus hobbies:</p>
 <div>
-<p></p>
+<p>filmes</p>
 <p>múica</p>
 <p>jogos</p>
 <p>carros</p>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js&quot; integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
 
 </body>
 </html>
