--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <p>Olá, eu sou Felipe Luis, um profissional apaixonado por desafios e sempre em busca de aprendizado constante.
 Sou uma pessoa dedicada, criativa e com grande capacidade de adaptação. Tenho facilidade em trabalhar em equipe, resolução de problemas e atenção aos detalhes. Minha paixão pela como tecnologia me impulsiona a sempre buscar soluções inovadoras e eficientes.
 </p>
+
 <p>meus hobbies:</p>
 <div>
-<p>filmes</p>
-<p>múica</p>
-<p>jogos</p>
-<p>carros</p>
+<p class="badge bg-secondary">filmes</p>
+<p class="badge bg-secondary">música</p>
+<p class="badge bg-secondary">jogos</p>
+<p class="badge bg-secondary">carros</p>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
 
