--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <header class="container text-center">
-        <img src="img/felipe.jpg" alt="" width="200" height="200">
+        <img src="img/felipe.jpg" alt="" width="200" height="200" 
+        class="rounded-circle">
 <h1 class="lead">nome é Felipe Luis Medeiros Souto</h1>
 <p>Olá, eu sou Felipe Luis, um profissional apaixonado por desafios e sempre em busca de aprendizado constante.
 Sou uma pessoa dedicada, criativa e com grande capacidade de adaptação. Tenho facilidade em trabalhar em equipe, resolução de problemas e atenção aos detalhes. Minha paixão pela como tecnologia me impulsiona a sempre buscar soluções inovadoras e eficientes.
