--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/css/bootstrap.min.css" rel="stylesheet">
-<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style_teste.css">
+    <title>meu portifolio</title>
 </head>
+
 <body>
-    <header class="container text-center">
-        <img src="img/felipe.jpg" alt="" width="200" height="200" 
-        class="rounded-circle">
-<h1 class="lead">nome é Felipe Luis Medeiros Souto</h1>
-<p>Olá, eu sou Felipe Luis, um profissional apaixonado por desafios e sempre em busca de aprendizado constante.
-Sou uma pessoa dedicada, criativa e com grande capacidade de adaptação. Tenho facilidade em trabalhar em equipe, resolução de problemas e atenção aos detalhes. Minha paixão pela como tecnologia me impulsiona a sempre buscar soluções inovadoras e eficientes.
-</p>
-
-<p>meus hobbies:</p>
-<div>
-<p class="badge bg-secondary">filmes</p>
-<p class="badge bg-secondary">música</p>
-<p class="badge bg-secondary">jogos</p>
-<p class="badge bg-secondary">carros</p>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.4/dist/js/bootstrap.bundle.min.js" integrity="sha384-YUe2LzesAfftltw+PEaao2tjU/QATaW/rOitAq67e0CT0Zi2VVRL0oC4+gAaeBKu" crossorigin="anonymous"></script>
-
+   <header>
+      <div class="header-content">
+          <img src="" alt="foto de perfil" class="profile-img">
+          <h1>Felipe Luis</h1>
+          <p>desenvolvedor web designer e UX/UI</p>
+      </div>
+   </header>    
 </body>
 </html>
+        <nav>
+      <ul>
+      <li><a href="#sobre">sobre</a></li>
+      <li><a href="#projetos">projetos</a></li>
+      <li><a href="#contato">contato</a></li>
+      </ul>
+
+
+
+        </nav>
