--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style_teste.css">
+    <link rel="stylesheet" href="style.css">
     <title>meu portifolio</title>
 </head>
 
 <body>
    <header>
       <div class="header-content">
-          <img src="" alt="foto de perfil" class="profile-img">
+          <img src="felipe.jpg" alt="foto de perfil" class="profile-img">
           <h1>Felipe Luis</h1>
           <p>desenvolvedor web designer e UX/UI</p>
       </div>
    </header>    
-</body>
-</html>
+
         <nav>
       <ul>
       <li><a href="#sobre">sobre</a></li>
@@ -28,3 +27,7 @@
 
 
         </nav>
+
+
+      </body>
+      </html>
