--- a/index.html
+++ b/index.html
@@ -17,17 +17,24 @@
       </div>
    </header>    
 
-        <nav>
+   <nav>
       <ul>
-      <li><a href="#sobre">sobre</a></li>
-      <li><a href="#projetos">projetos</a></li>
-      <li><a href="#contato">contato</a></li>
+           <li><a href="#sobre">sobre</a></li>
+           <li><a href="#projetos">projetos</a></li>
+           <li><a href="#contato">contato</a></li>
       </ul>
+   </nav>
+   <section id="about-content">
+       <h2>sobre mim</h2>
+      <div class="about-content">   
+          <div class="about-text">
+            <p>Olá Eu sou Felipe Luis, um desenvolvedor web apaixonado por criar experiências digitais incriveis
+            </p>
 
 
 
-        </nav>
 
 
+</section>
       </body>
       </html>
