--- a/index.html
+++ b/index.html
@@ -28,12 +28,31 @@
        <h2>sobre mim</h2>
       <div class="about-content">   
           <div class="about-text">
-            <p>Olá Eu sou Felipe Luis, um desenvolvedor web apaixonado por criar experiências digitais incriveis
+            <p>Olá Eu sou Felipe Luis, um desenvolvedor web apaixonado por criar experiências digitais incriveis. com mais de 5 anos de experiência no mercado, ja trabalhei com diversas tecnologias e frameworks.
+            
+            Minha especialidade é desenvolver interfaces bonitas e funcionais, com foco na experiência do usuário. Acredito que a tecnologia deve ser acessivel e agradável para todos.
+            
+            Quando não estou codando, você pode me encontrar lendo um bom livro, explorando a natureza  ou experimentando  novas receitas na cozinha.
             </p>
 
 
 
 
+
+</section>
+
+<section id="projetos">
+    <h2>Meus projetos</h2>
+    <div class="projects-grid">
+    <div class="projects-card">
+    <img src="" alt="">
+
+        </div>
+    </div>
+
+
+</section>
+ 
 
 </section>
       </body>
