--- a/index.html
+++ b/index.html
@@ -43,17 +43,33 @@
 
 <section id="projetos">
     <h2>Meus projetos</h2>
-    <div class="projects-grid">
-    <div class="projects-card">
-    <img src="" alt="">
-
+    <div class="project-grid">
+    <div class="project-card">
+    <img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBP8DmwqURkPchHisB78WgbVNnPNV_dqJPp8-2crj_LUZZ1YBDawM35Wv9p4twDJtgo5fIUgZG9Kd5mItrULA_JlmRff-hmS2DU6_s0Y1YxiZsE=w1920-h975" alt="projeto 1" class="project-img">
+    <div class="project-info">
+        <h3>e-commerce Orgânico</h3>
+            <p>Plataforma de e-commmerce para produtos orgânicos com sistema de pedidos e pagamentos integrado. </p>
         </div>
-    </div>
+        </div>
 
+        <div class="project-card">
+            <img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBMbCOlr_e5e9oUbdWHeln5vm9Dag1v12N348i6TaB0eAf7li1G0mThLk8C_2Z5icd67kFJ2VkxVPFCAX2dkwnB_ZbWQPm5Kl3hRp66ji0mUeL0=w1920-h975" alt="projeto 2" class="project-img">
+        <div class="project-info">
+            <h3>Aplicativo de turismo</h3>
+              <p>aplicativo de turismo para descobrir pontos turisticos com realidade aumentada e guia personalizado</p>
+            
+            </div>
+        </div>
+    
+    <div class="project-card">
+        <img src="https://lh3.googleusercontent.com/drive-storage/AJQWtBN0CrUTcxCTK6giBdxMqEHOUz4f_eAghMsZkHZGBYpRyybXK6UW58hQzE9cy5tMgTyga9BZqouuxGM6LH2UyOtadF2nERqMQiw8Qx7AXh_HP6k=w1920-h975" alt="projeto 3">
+    <div class="project-info">
+    <h3>blog de tecnologia</h3>
+    <p>blog moderno com sistema de categoria, busca avançada integração com redes sociais.</p>
 
-</section>
- 
-
+</div>
+</div>
+</div>
 </section>
       </body>
       </html>
